// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon should accept fill prop 1`] = `
.emotion-0 {
  fill: #D01E29;
  font-size: 1.5rem;
}

<div>
  <svg
    aria-hidden="true"
    class="emotion-0"
    height="1em"
    role="img"
    viewBox="0 0 24 24"
    width="1em"
  >
    <path
      d="M18 16h1c.667 0 1 .333 1 1s-.333 1-1 1H5c-.667 0-1-.333-1-1s.333-1 1-1h1v-5.961a6.032 6.032 0 014-5.677V4a2 2 0 114 0v.34c2.328.81 4 3.016 4 5.621V16zm-2 0v-6a4 4 0 10-8 0v6h8zm-6 4a2 2 0 004 0h-4z"
    />
  </svg>
</div>
`;

exports[`Icon should accept size prop 1`] = `
.emotion-0 {
  fill: currentColor;
  font-size: 3rem;
}

<div>
  <svg
    aria-hidden="true"
    class="emotion-0"
    height="1em"
    role="img"
    viewBox="0 0 24 24"
    width="1em"
  >
    <path
      d="M18 16h1c.667 0 1 .333 1 1s-.333 1-1 1H5c-.667 0-1-.333-1-1s.333-1 1-1h1v-5.961a6.032 6.032 0 014-5.677V4a2 2 0 114 0v.34c2.328.81 4 3.016 4 5.621V16zm-2 0v-6a4 4 0 10-8 0v6h8zm-6 4a2 2 0 004 0h-4z"
    />
  </svg>
</div>
`;

exports[`Icon should accept stroke prop 1`] = `
.emotion-0 {
  fill: currentColor;
  stroke: #AD5000;
  font-size: 1.5rem;
}

<div>
  <svg
    aria-hidden="true"
    class="emotion-0"
    height="1em"
    role="img"
    viewBox="0 0 24 24"
    width="1em"
  >
    <path
      d="M18 16h1c.667 0 1 .333 1 1s-.333 1-1 1H5c-.667 0-1-.333-1-1s.333-1 1-1h1v-5.961a6.032 6.032 0 014-5.677V4a2 2 0 114 0v.34c2.328.81 4 3.016 4 5.621V16zm-2 0v-6a4 4 0 10-8 0v6h8zm-6 4a2 2 0 004 0h-4z"
    />
  </svg>
</div>
`;

exports[`Icon should accept style prop 1`] = `
.emotion-0 {
  fill: currentColor;
  font-size: 1.5rem;
  stroke-width: 5;
}

<div>
  <svg
    aria-hidden="true"
    class="emotion-0"
    height="1em"
    role="img"
    viewBox="0 0 24 24"
    width="1em"
  >
    <path
      d="M18 16h1c.667 0 1 .333 1 1s-.333 1-1 1H5c-.667 0-1-.333-1-1s.333-1 1-1h1v-5.961a6.032 6.032 0 014-5.677V4a2 2 0 114 0v.34c2.328.81 4 3.016 4 5.621V16zm-2 0v-6a4 4 0 10-8 0v6h8zm-6 4a2 2 0 004 0h-4z"
    />
  </svg>
</div>
`;

exports[`Icon should render correctly 1`] = `
.emotion-0 {
  fill: currentColor;
  font-size: 1.5rem;
}

<div>
  <svg
    aria-hidden="true"
    class="emotion-0"
    height="1em"
    role="img"
    viewBox="0 0 24 24"
    width="1em"
  >
    <path
      clip-rule="evenodd"
      d="M17.005 2.755c.948-.94 1.89-.94 2.828-.001 1.407 1.409-.002-.004 1.408 1.408.94.94.94 1.883-.003 2.825l-2.83 2.83-4.232-4.233 2.829-2.83zm1.411 1.41L17.001 5.58l1.411 1.41 1.415-1.413-1.411-1.411v-.001zM12.929 6.81l4.233 4.233L7.088 21.117l-3.841.784a1.163 1.163 0 01-.89-.195c-.266-.186-.37-.516-.312-.993l.81-3.828L12.93 6.81h-.001zm0 2.84l-7.95 7.952-.71 2.12 2.12-.71 7.952-7.95-1.411-1.411-.001-.001z"
    />
  </svg>
</div>
`;
